# libbacnet

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api-reference.md  asyncio-internals.md  encoding-pipeline.md  invoke-id-lifecycle.md  layer-architecture.md  segmentation-state-machines.md  stack-architecture.md
examples/: discover_read_write.py
python/libbacnet/: __init__.py  _asyncio.py  _enums.py
src/: enums.rs  lib.rs
src/codec/: apdu.rs  bvlc.rs  mod.rs  npdu.rs  types.rs
src/pyo3_bindings/: mod.rs
src/services/: i_am.rs  mod.rs  read_property.rs  read_property_multiple.rs  who_is.rs  write_property.rs
src/stack/: addr.rs  invoke_id.rs  mod.rs  segmentation.rs  slot.rs  types.rs
tests/: conftest.py  test_asyncio_layer.py  test_bindings.py  test_e2e.py
